--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   
  <a href="index.html" class="logo-link">
-  <img src="logo.png" alt="Lynk" class="logo">
+  <img src="Screenshot_2025-12-19-00-12-31-14_96b26121e545231a3c569311a54cda96.jpg" alt="Lynk" class="logo">
 </a>
  
     <div class="container">
