--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 <body>
   
- <a href="index.html" class="logo-link">
-  <img src="Screenshot_2025-12-19-00-12-31-14_96b26121e545231a3c569311a54cda96.jpg" alt="Lynk" class="logo">
+<a href="index.html" class="brand">
+  <img src="Screenshot_2025-12-19-00-12-31-14_96b26121e545231a3c569311a54cda96.jpg" alt="Lynk logo">
+  <span class="brand-text">Lynk</span>
 </a>
  
     <div class="container">
@@ -35,6 +36,24 @@
     </a>
     
   </div>
+  </div>
+  
+  
+ <div class="convince">
+  <p>Thousands of people are already discovering opportunities that go beyond casual connections. Lynk is designed to bring people together who are serious about meaningful interactions—whether it’s networking, meeting like-minded individuals, or exploring exclusive experiences that you can’t find anywhere else. Every profile is curated, and every action you take moves you closer to unlocking premium opportunities.</p>
+  
+  <p>Sign up now to create your profile, explore curated matches, and experience features designed to give you the most value for your time. From live updates to real-time statistics on active users, you’ll feel part of an ever-growing community that’s vibrant, dynamic, and ready for engagement.</p>
+  
+  <p>Coming soon: premium perks that elevate your experience. Verified profiles, exclusive content, and advanced filters will help you maximize your time and connections. By joining now, you secure early access to these tools and position yourself ahead of the curve. Why wait? Every click could lead to new opportunities that matter—both in engagement and in premium rewards.</p>
+</div>
+
+  
+  
+
+  <script src="script.js"></script>
+</body>
+
+</html>  </div>
   </div>
   
   
