--- a/login.html
+++ b/login.html
@@ -8,8 +8,9 @@
 </head>
 
 <body>
-  <a href="index.html" class="logo-link">
-  <img src="Screenshot_2025-12-19-00-12-31-14_96b26121e545231a3c569311a54cda96.jpg" alt="Lynk" class="logo">
+  <a href="index.html" class="brand">
+  <img src="Screenshot_2025-12-19-00-12-31-14_96b26121e545231a3c569311a54cda96.jpg" alt="Lynk logo">
+  <span class="brand-text">Lynk</span>
 </a>
   <div class="login-container">
     <h1>Welcome back</h1>
